Changed when Cache is available

--- a/Stasistium.Core/Stages/ConcatStage.tt
+++ b/Stasistium.Core/Stages/ConcatStage.tt
@@ -138,24 +138,24 @@ for (int j = 1; j <= i; j++)
                 if (result<#= j #>.HasChanges)
                 {
                     var performed = await result<#= j #>.Perform;
-                    newCache.Ids<#= j #> = new string[performed.result.Count];
-                    newCache.PreviouseCache<#= j #> = performed.cache;
+                    newCache.Ids<#= j #> = new string[performed.Count];
+                    newCache.PreviouseCache<#= j #> = result<#= j #>.Cache;
 
-                    for (int i = 0; i < performed.result.Count; i++)
+                    for (int i = 0; i < performed.Count; i++)
                     {
-                        var child = performed.result[i];
+                        var child = performed[i];
 
                         if (child.HasChanges)
                         {
                             var childPerformed = await child.Perform;
 
                             
-                            if (cache == null || !cache.IdToHash.TryGetValue(childPerformed.result.Id, out string? oldHash))
+                            if (cache == null || !cache.IdToHash.TryGetValue(childPerformed.Id, out string? oldHash))
                                 oldHash = null;
-                            var childHashChanges = oldHash != childPerformed.result.Hash;
+                            var childHashChanges = oldHash != childPerformed.Hash;
 
-                            list.Add(StageResult.Create(childPerformed.result, childPerformed.result.Hash, childHashChanges, childPerformed.result.Id));
-                            newCache.IdToHash.Add(child.Id, childPerformed.result.Id);
+                            list.Add(StageResult.Create(childPerformed, childHashChanges, childPerformed.Id, childPerformed.Hash));
+                            newCache.IdToHash.Add(child.Id, childPerformed.Id);
 
                         }
                         else
@@ -164,11 +164,11 @@ for (int j = 1; j <= i; j++)
                             var childTask = LazyTask.Create(async () =>
                             {
                                 var childPerform = await child.Perform;
-                                return (childPerform.result, childPerform.result.Hash);
+                                return childPerform;
                             });
-                            list.Add(StageResult.Create(childTask, false, child.Id));
                             if (cache is null || !cache.IdToHash.TryGetValue(child.Id, out var oldHash))
                                 throw this.Context.Exception("Should Not Happen");
+                            list.Add(StageResult.Create(childTask, false, child.Id, oldHash));
                             newCache.IdToHash.Add(child.Id, oldHash);
 
                         }
@@ -186,14 +186,17 @@ for (int j = 1; j <= i; j++)
                         var childTask = LazyTask.Create(async () =>
                         {
                             var performed = await result<#= j #>.Perform;
-                            var chiledIndex = performed.result[currentIndex];
+                            var chiledIndex = performed[currentIndex];
                             var childPerform = await chiledIndex.Perform;
                             // We are in the no changes part. So ther must be no changes.
                             System.Diagnostics.Debug.Assert(!chiledIndex.HasChanges);
 
-                            return (childPerform.result, childPerform.result.Hash);
+                            return childPerform;
                         });
-                        list.Add(StageResult.Create(childTask, false, cache.Ids<#= j #>[currentIndex]));
+                        if (cache is null || !cache.IdToHash.TryGetValue(cache.Ids<#= j #>[currentIndex], out var oldHash))
+                            throw this.Context.Exception("Should Not Happen");
+
+                        list.Add(StageResult.Create(childTask, false, cache.Ids<#= j #>[currentIndex], oldHash));
                     }
                     newCache.PreviouseCache<#= j #> = cache.PreviouseCache<#= j #>;
                     newCache.Ids<#= j #> = cache.Ids<#= j #>;
@@ -243,6 +246,7 @@ for (int j = 1; j <= i; j++)
 <#
 }
 #>
+                return StageResultList.Create(performed.result, hasChanges, ids.ToImmutable(), performed.cache);
             }
             else
             {
@@ -254,9 +258,12 @@ for (int j = 1; j <= i; j++)
 <#
 }
 #>
+                var actualTask = LazyTask.Create(async ()=>{
+                    var temp = await task;
+                return temp.result;
+            });
+            return StageResultList.Create(actualTask, hasChanges, ids.ToImmutable(), cache);
             }
-
-            return StageResultList.Create(task, hasChanges, ids.ToImmutable());
         }
     }
 #pragma warning disable CS8618 // Non-nullable field is uninitialized. Consider declaring as nullable.
