--- a/Stasistium.Core/Stages/GeneratedBaseStages.tt
+++ b/Stasistium.Core/Stages/GeneratedBaseStages.tt
@@ -215,7 +215,7 @@ for(int j = 0; j< list; j++){
 
                 if(!hasChanges)
                     this.Context.Logger.Info($"Output will not have changes.");
-                return StageResult.Create(result.work, hasChanges, id, result.cache);
+                return this.Context.CreateStageResult(result.work, hasChanges, id, result.cache);
 
             }
             else {
@@ -223,7 +223,7 @@ for(int j = 0; j< list; j++){
                     var temp = await task;
                     return temp.work;
                 });
-                return StageResult.Create(actualTask, hasChanges, id, cache);
+                return this.Context.CreateStageResult(actualTask, hasChanges, id, cache);
             }
         }
 
@@ -410,7 +410,7 @@ await Task.WhenAll(
                     var hasChanges =true;
                     if(oldChildCaches !=null && oldChildCaches.TryGetValue(x.Id, out var oldHash))
                         hasChanges = x.Hash != oldHash;
-                    return (result: StageResult.Create( x,hasChanges,x.Id, x.Hash), hash: x.Hash);
+                    return (result: this.Context.CreateStageResult( x,hasChanges,x.Id, x.Hash), hash: x.Hash);
                 
                 }).ToArray();
 
@@ -464,14 +464,14 @@ var parameter = new StringBuilder();
                 if(!hasChanges)
                     this.Context.Logger.Info($"Output will not have changes.");
 
-                return StageResultList.Create(result.work, hasChanges, ids.Select(x=>x.id).ToImmutableList(), result.cache);
+                return this.Context.CreateStageResultList(result.work, hasChanges, ids.Select(x=>x.id).ToImmutableList(), result.cache);
             }
             else{
                 var actualTask= LazyTask.Create(async ()=>{
                     var temp = await task;
                     return temp.work;
                 });
-                return StageResultList.Create(actualTask, hasChanges, ids.Select(x=>x.id).ToImmutableList(), cache);
+                return this.Context.CreateStageResultList(actualTask, hasChanges, ids.Select(x=>x.id).ToImmutableList(), cache);
             }
         }
 
@@ -627,7 +627,7 @@ var parameter = new StringBuilder();
 //            // if currentCache is null, hasChanges must be true and so currentCache will be set.
 //            var theId = currentCache!.Ids;
 //
-//            return StageResult.Create(task, hasChanges, theId.Select(x => x.id).ToImmutableList());
+//            return this.Context.CreateStageResult(task, hasChanges, theId.Select(x => x.id).ToImmutableList());
 //        }
 //
 //        protected virtual bool ForceUpdate([AllowNull]TCache cache, OptionToken options) => true;
