--- a/Stasistium.Core/Stages/GeneratedBaseStages.tt
+++ b/Stasistium.Core/Stages/GeneratedBaseStages.tt
@@ -211,11 +211,11 @@ for(int j = 0; j< list; j++){
                 var result = await task;
 
                 id = result.work.Id;
-                hasChanges = !await this.CacheEquals(cache?.Data, result.cache.Data).ConfigureAwait(false);
+                hasChanges = !await this.CacheEquals(cache?.Data, result.cache.Data!).ConfigureAwait(false);
 
                 if(!hasChanges)
                     this.Context.Logger.Info($"Output will not have changes.");
-                return this.Context.CreateStageResult(result.work, hasChanges, id, result.cache);
+                return this.Context.CreateStageResult(result.work, hasChanges, id, result.cache, result.work.Hash);
 
             }
             else {
@@ -223,7 +223,7 @@ for(int j = 0; j< list; j++){
                     var temp = await task;
                     return temp.work;
                 });
-                return this.Context.CreateStageResult(actualTask, hasChanges, id, cache);
+                return this.Context.CreateStageResult(actualTask, hasChanges, id, cache, cache.Data!);
             }
         }
 
@@ -410,7 +410,7 @@ await Task.WhenAll(
                     var hasChanges =true;
                     if(oldChildCaches !=null && oldChildCaches.TryGetValue(x.Id, out var oldHash))
                         hasChanges = x.Hash != oldHash;
-                    return (result: this.Context.CreateStageResult( x,hasChanges,x.Id, x.Hash), hash: x.Hash);
+                    return (result: this.Context.CreateStageResult( x,hasChanges,x.Id, x.Hash, x.Hash), hash: x.Hash);
                 
                 }).ToArray();
 
@@ -464,14 +464,14 @@ var parameter = new StringBuilder();
                 if(!hasChanges)
                     this.Context.Logger.Info($"Output will not have changes.");
 
-                return this.Context.CreateStageResultList(result.work, hasChanges, ids.Select(x=>x.id).ToImmutableList(), result.cache);
+                return this.Context.CreateStageResultList(result.work, hasChanges, ids.Select(x=>x.id).ToImmutableList(), result.cache, this.Context.GetHashForObject(result.cache.Ids.Select(x=>x.hash)));
             }
             else{
                 var actualTask= LazyTask.Create(async ()=>{
                     var temp = await task;
                     return temp.work;
                 });
-                return this.Context.CreateStageResultList(actualTask, hasChanges, ids.Select(x=>x.id).ToImmutableList(), cache);
+                return this.Context.CreateStageResultList(actualTask, hasChanges, ids.Select(x=>x.id).ToImmutableList(), cache, this.Context.GetHashForObject(cache.Ids.Select(x=>x.hash)));
             }
         }
 
